@@ -105,6 +105,14 @@ This directive is deprecated in favor of the \fBlibdefaults\fR
 @MAN_AFS@tells pam_krb5.so to completely ignore the presence of AFS, preventing
 @MAN_AFS@any attempts to obtain new tokens on behalf of the calling application.
 @MAN_AFS@
+.IP "ignore_k5login=\fItrue\fR|\fIfalse\fR|\fIservice [...]\fR"
+specifies which other not pam_krb5 should skip checking the user's .k5login
+file to verify that the principal name of the client being authenticated is
+authorized to access the user account.  (Actually, the check is performed by
+a function offered by the Kerberos library, which controls which files it
+will consult.)  The default is \fIfalse\fR, which causes pam_krb5 to perform
+the check.
+
 .IP "ignore_unknown_principals=\fItrue\fR|\fIfalse\fR|\fIservice [...]\fR"
 .IP "ignore_unknown_spn=\fItrue\fR|\fIfalse\fR|\fIservice [...]\fR"
 .IP "ignore_unknown_upn=\fItrue\fR|\fIfalse\fR|\fIservice [...]\fR"
